FIX: DEBUG decouple

--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,5 @@ settings.ini
 *.sqlite3
 
 /media
-KakaoTalk_20220306_213823080.jpg
-KakaoTalk_20220306_213856614.jpg
+static/KakaoTalk_20220306_213823080.jpg
+media/main_photo.jpg
